# chzzk-vod-downloader-v2

./: .gitignore  CVDv2.py  README-en.md  README.md  capture_playback_debug.py  chzzk-vod-downloader-v2.py  compile_translations.py  main.py  project.json  pyproject.toml  requirements.txt  resources.py  threads.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  improvement.yml
.github/workflows/: ci.yml  release.yml
app/common/: config.py  download_state.py  icon.py  resource.py  style_sheet.py  translator.py
app/components/: custom_cookie_setting_card.py  download_card.py
app/resource/: resource.qrc
app/view/: base_interface.py  download_interface.py  drop_card.py  main_window.py  setting_interface.py  setting_view.py
application/: mainWindow.py
config/: config.py  dialog.py  log_setup.py  worker.py
config/speedtest/: InterruptibleSpeedtest.py
content/: data.py  delegate.py  manager.py  model.py  network.py  view.py  widget.py  worker.py
content/item/: base.py
core/: __init__.py
core/api/: dash.py  session.py  url_parser.py
core/downloaders/: file_downloader.py  m3u8_downloader.py  ranges.py
core/models/: __init__.py  content.py  download_state.py  download_task.py  events.py
core/services/: __init__.py  metadata_service.py
core/utils/: logging_setup.py
docs/: changelog.md  download_interface.md  project-report.md
download/: data.py  download.py  download_m3u8.py  logger.py  manager.py  monitor.py  monitor_m3u8.py  state.py  task.py
downloader/: main_window.py
metadata/: data.py  delegate.py  manager.py  model.py  network.py  view.py  widget.py  worker.py
resources/: icon.icns
scripts/: capture_playback_debug.py  headless_download.py  log_changes.py  summarize_download_log.py
tests/: conftest.py
tests/fixtures/mock_responses/: dash_manifest.xml  dash_manifest_audio_only_14158884.xml  dash_manifest_portrait.xml  dash_manifest_sea_13714380.xml  dash_manifest_sea_14283698.xml  (+3 more)
tests/mocks/: mock_http.py
tests/unit/: test_download_data.py  test_download_ranges.py  test_download_task_adapter.py  test_log_setup.py  test_network.py  test_network_session.py  test_resource_path.py  test_set_language.py  test_worker.py
translations/: en_US.qm  en_US.ts  ko_KR.qm  ko_KR.ts
ui/: contentItemWidget.py  contentItemWidget.ui  mainWindow.py  mainWindow.ui  metadataCard.py  metadataCardManager.py  settingDialog.py  settingDialog.ui  vodDownloader.py
(+14 files in other folders)
