[project]
name = "cvdv2"
version = "2.8.0"
description = "Chzzk VOD Downloader v2"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-qt",
    "ruff",
    "nuitka",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ui/*.py는 pyside6-uic 자동 생성 파일(.ui 원본 존재)이다. 수동으로 미사용 import를
# 지워도 재생성 시 되살아나므로 F401 예외를 유지한다 (#32). 손으로 작성한 파일의
# 예외는 전부 해소되어 제거됨.
"ui/*.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
